--- a/doc/agile/sprint_backlog_99.org
+++ b/doc/agile/sprint_backlog_99.org
@@ -13,30 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-18 Sat 18:53]
+#+CAPTION: Clock summary at [2017-03-18 Sat 22:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *50:46* |       |       | 100.0 |
+| *Total time*                                                                | *52:10* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 50:46   |       |       | 100.0 |
-| Active                                                                      |         | 50:46 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   2.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.9 |
-| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   5.8 |
-| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |  10.0 |
-| COMPLETED Split include and source directories                              |         |       |  5:22 |  10.6 |
-| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  16.4 |
-| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.2 |
+| Stories                                                                     | 52:10   |       |       | 100.0 |
+| Active                                                                      |         | 52:10 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  1:01 |   1.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:26 |   0.8 |
+| COMPLETED Add test model for path meta-data                                 |         |       |  2:58 |   5.7 |
+| COMPLETED ODB CMakeLists does not cope with changes to project paths        |         |       |  5:04 |   9.7 |
+| COMPLETED Split include and source directories                              |         |       |  5:22 |  10.3 |
+| COMPLETED Add C++-03 mode                                                   |         |       |  8:19 |  15.9 |
+| COMPLETED Add a LAM test model just to validate existing functionality      |         |       |  2:38 |   5.0 |
 | COMPLETED Split project should not include model name                       |         |       |  0:18 |   0.6 |
 | COMPLETED Always add multiple databases to ODB options                      |         |       |  0:03 |   0.1 |
-| COMPLETED Fix issues with dropbox downloads                                 |         |       |  3:38 |   7.2 |
-| STARTED Create a UML profile to formalise yarn concepts                     |         |       |  0:23 |   0.8 |
+| COMPLETED Fix issues with dropbox downloads                                 |         |       |  3:38 |   7.0 |
+| STARTED Create a UML profile to formalise yarn concepts                     |         |       |  0:23 |   0.7 |
 | STARTED Check for incompatibility between input language and enabled kernels |         |       |  0:11 |   0.4 |
 | STARTED Build on tags for Windows                                           |         |       |  0:15 |   0.5 |
 | STARTED Add a "flat directory" mode                                         |         |       |  0:08 |   0.3 |
 | STARTED Handling of visual studio projects and solutions is incorrect       |         |       |  1:11 |   2.3 |
-| STARTED Implement the database model using Northwind                        |         |       | 18:51 |  37.1 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:15 |  38.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -427,6 +427,7 @@ includes. There are some differences though:
   Visual Studio element we have visibility of all enabled versions.
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-03-18 Sat 20:51]--[2017-03-18 Sat 22:15] =>  1:24
     CLOCK: [2017-03-18 Sat 17:08]--[2017-03-18 Sat 18:53] =>  1:45
     CLOCK: [2017-03-17 Fri 11:30]--[2017-03-17 Fri 11:50] =>  0:20
     CLOCK: [2017-03-16 Thu 19:39]--[2017-03-16 Thu 20:24] =>  0:45
