--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-24 Fri 10:05]
-| <75>                                                                        |         |       |      |       |
-| Headline                                                                    | Time    |       |      |     % |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *25:27* |       |      | 100.0 |
-|-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 25:27   |       |      | 100.0 |
-| Active                                                                      |         | 25:27 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:52 |   3.4 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   2.0 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   3.2 |
-| COMPLETED Disable common support on ODB for a single database               |         |       | 0:08 |   0.5 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       | 8:26 |  33.1 |
-| COMPLETED Use =cxx= extension with ODB files                                |         |       | 0:32 |   2.1 |
-| STARTED Implement the database model using Northwind                        |         |       | 1:58 |   7.7 |
-| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   2.4 |
-| STARTED Ignore ODB files automatically                                      |         |       | 1:55 |   7.5 |
-| STARTED Improve ODB implementation                                          |         |       | 9:40 |  38.0 |
+#+CAPTION: Clock summary at [2017-03-24 Fri 11:51]
+| <75>                                                                        |         |       |       |       |
+| Headline                                                                    | Time    |       |       |     % |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| *Total time*                                                                | *27:12* |       |       | 100.0 |
+|-----------------------------------------------------------------------------+---------+-------+-------+-------|
+| Stories                                                                     | 27:12   |       |       | 100.0 |
+| Active                                                                      |         | 27:12 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   3.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.8 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   3.0 |
+| COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.5 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  31.0 |
+| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   2.0 |
+| STARTED Implement the database model using Northwind                        |         |       |  1:58 |   7.2 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   2.3 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   7.0 |
+| STARTED Improve ODB implementation                                          |         |       | 11:25 |  42.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -327,6 +327,7 @@ This also means we can add the ODB files to the visual studio project
 even before they get generated.
 
 *** STARTED Improve ODB implementation                                :story:
+    CLOCK: [2017-03-24 Fri 10:06]--[2017-03-24 Fri 11:51] =>  1:45
     CLOCK: [2017-03-24 Fri 09:01]--[2017-03-24 Fri 10:05] =>  1:04
     CLOCK: [2017-03-23 Thu 16:22]--[2017-03-23 Thu 18:01] =>  1:39
     CLOCK: [2017-03-23 Thu 14:05]--[2017-03-23 Thu 16:21] =>  2:16
