--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-24 Fri 13:40]
+#+CAPTION: Clock summary at [2017-03-24 Fri 15:56]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *27:54* |       |       | 100.0 |
+| *Total time*                                                                | *28:38* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 27:54   |       |       | 100.0 |
-| Active                                                                      |         | 27:54 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   3.1 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.8 |
+| Stories                                                                     | 28:38   |       |       | 100.0 |
+| Active                                                                      |         | 28:38 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   3.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.7 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.9 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.5 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  30.2 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  29.5 |
 | COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.9 |
-| STARTED Implement the database model using Northwind                        |         |       |  1:58 |   7.0 |
+| STARTED Implement the database model using Northwind                        |         |       |  1:58 |   6.9 |
 | STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   2.2 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   6.9 |
-| STARTED Improve ODB implementation                                          |         |       | 12:07 |  43.4 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   6.7 |
+| STARTED Improve ODB implementation                                          |         |       | 12:51 |  44.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -327,6 +327,8 @@ This also means we can add the ODB files to the visual studio project
 even before they get generated.
 
 *** STARTED Improve ODB implementation                                :story:
+    CLOCK: [2017-03-24 Fri 15:49]--[2017-03-24 Fri 15:56] =>  0:07
+    CLOCK: [2017-03-24 Fri 15:11]--[2017-03-24 Fri 15:48] =>  0:37
     CLOCK: [2017-03-24 Fri 13:32]--[2017-03-24 Fri 13:39] =>  0:07
     CLOCK: [2017-03-24 Fri 13:01]--[2017-03-24 Fri 13:31] =>  0:30
     CLOCK: [2017-03-24 Fri 11:52]--[2017-03-24 Fri 11:57] =>  0:05
