--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-24 Fri 20:50]
+#+CAPTION: Clock summary at [2017-03-25 Sat 11:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *28:47* |       |       | 100.0 |
+| *Total time*                                                                | *30:13* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 28:47   |       |       | 100.0 |
-| Active                                                                      |         | 28:47 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   3.0 |
+| Stories                                                                     | 30:13   |       |       | 100.0 |
+| Active                                                                      |         | 30:13 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   2.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.7 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.8 |
-| COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.5 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  29.3 |
-| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.9 |
-| STARTED Implement the database model using Northwind                        |         |       |  1:58 |   6.8 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   2.1 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   6.7 |
-| STARTED Improve ODB implementation                                          |         |       | 13:00 |  45.2 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.7 |
+| COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.4 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  27.9 |
+| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.8 |
+| STARTED Implement the database model using Northwind                        |         |       |  1:58 |   6.5 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   2.0 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   6.3 |
+| STARTED Improve ODB implementation                                          |         |       | 14:26 |  47.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -327,6 +327,7 @@ This also means we can add the ODB files to the visual studio project
 even before they get generated.
 
 *** STARTED Improve ODB implementation                                :story:
+    CLOCK: [2017-03-25 Sat 10:02]--[2017-03-25 Sat 11:28] =>  1:26
     CLOCK: [2017-03-24 Fri 20:41]--[2017-03-24 Fri 20:50] =>  0:09
     CLOCK: [2017-03-24 Fri 15:49]--[2017-03-24 Fri 15:56] =>  0:07
     CLOCK: [2017-03-24 Fri 15:11]--[2017-03-24 Fri 15:48] =>  0:37
