--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-25 Sat 11:28]
+#+CAPTION: Clock summary at [2017-03-25 Sat 19:49]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *30:13* |       |       | 100.0 |
+| *Total time*                                                                | *33:48* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 30:13   |       |       | 100.0 |
-| Active                                                                      |         | 30:13 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   2.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.7 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.7 |
+| Stories                                                                     | 33:48   |       |       | 100.0 |
+| Active                                                                      |         | 33:48 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   2.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.5 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.4 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.4 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  27.9 |
-| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.8 |
-| STARTED Implement the database model using Northwind                        |         |       |  1:58 |   6.5 |
-| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   2.0 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   6.3 |
-| STARTED Improve ODB implementation                                          |         |       | 14:26 |  47.8 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  25.0 |
+| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.6 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  5:33 |  16.4 |
+| STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   1.8 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.7 |
+| STARTED Improve ODB implementation                                          |         |       | 14:26 |  42.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -190,7 +190,10 @@ found adds:
 :    "${CMAKE_CURRENT_SOURCE_DIR}/*.cxx")
 : set(files ${files} ${odb_files})
 
-*** STARTED Implement the database model using Northwind              :story:
+*** COMPLETED Implement the database model using Northwind            :story:
+    CLOSED: [2017-03-25 Sat 19:48]
+    CLOCK: [2017-03-25 Sat 16:39]--[2017-03-25 Sat 19:48] =>  3:09
+    CLOCK: [2017-03-25 Sat 16:12]--[2017-03-25 Sat 16:38] =>  0:26
     CLOCK: [2017-03-20 Mon 20:45]--[2017-03-20 Mon 22:43] =>  1:58
 
 Now we are using Dogen in anger with ODB, we need to make sure the
@@ -392,6 +395,21 @@ Problem:
   file for each element - plus a common one for all common
   options. The element options file will have all options that require
   regexes.
+
+*** Primitives are not comparable                                     :story:
+
+Our wrapping code around primitives means we can no longer perform
+arithmetic operations on them or comparisons. This may be what is
+intended (e.g. adding or multiplying =customer_id= does not make
+sense) but it also means we can't delete ranges from the database for
+example. It would be nice if there was some meta-data we could add to
+primitives to make this possible:
+
+- =comparable=
+- etc
+
+With this we would generate the appropriate operators by delegating to
+the underlying type.
 
 *** ODB options does not cater for types placed in namespaces         :story:
 
